2004-10-28  Sven Neumann  <sven@gimp.org>

	* app/actions/layers-actions.c (layers_actions_update): do not set
	the "layers-mask-add" action insensitive if there's no alpha channel.

	* app/actions/layers-commands.c (layers_add_mask_response): add an
	alpha channel if there isn't one already. Fixes bug #156676.

2004-10-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-interface.c (script_fu_interface):
	use gimp_int_combo_box_connect() so that the initial selection
	causes the "changed" callback to be run. Should fix bug #156659.

2004-10-28  Øyvind Kolås  <pippin@gimp.org>

	* app/display/gimpdisplayshell-preview.c: Improve preview accuracy of
	perspective transform, by subdiving into a 5x5 grid.

	Fixes bug #152222.

2004-10-27  Philip Lafleur  <plafleur@cvs.gnome.org>

	* app/display/gimpdisplayshell-preview.c: Really fixed all cases
	of the perspective tool preview breaking with certain orientations by
	using triangles instead of quads.

2004-10-27  Philip Lafleur  <plafleur@cvs.gnome.org>

	* app/display/gimpdisplayshell-preview.c: Hopefully fixed all cases
	of the perspective tool preview breaking with certain orientations.

2004-10-27  Manish Singh  <yosh@gimp.org>

	* tools/pdbgen/enumcode.pl: Don't declare $first twice.

	* libgimp/Makefile.am: Be sure to distribute gimpenums.c.tail.

	* libgimp/gimpenums.c.tail: Added into CVS.

2004-10-27  DindinX  <dindinx@gimp.org>

	* plug-ins/gfig/gfig-bezier.[ch]: added a notebook page for the
	bezier tool options instead of yet another popup window.

	* plug-ins/gfig/gfig-dialog.c: modified accordingly and HIGed a bit.

2004-10-27  Øyvind Kolås  <pippin@gimp.org>

	* app/core/gimpdrawable-transform.c: made the fixed point used in
	supersampling configurable (in source) and changed from 15.16 to
	21.10 fixed point.
	
	Fixes bug #128594 for drawables less than 2G wide.

2004-10-27  Michael Schumacher <schumaml@gmx.de>

	* app/widgets/gimpwidgets-utils.c: fixed a typo in