@@ -1,5 +1,10 @@
 2004-10-28  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/raw.c (query): do not install an extension for
+	the raw plug-in to avoid confusion with the dcraw format.
+
+2004-10-28  Sven Neumann  <sven@gimp.org>
+
 	* app/actions/layers-actions.c (layers_actions_update): do not set
 	the "layers-mask-add" action insensitive if there's no alpha channel.
 
